--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,26 +1,9 @@
 .div{margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; display: flex; flex-direction: column; justify-content: space-between; height: 15%; }
-.div2{margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; display: flex; flex-direction: column; justify-content: space-between; height: 30%; margin-top: 5%; }
+.div2{text-align: center; margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; display: flex; flex-direction: column; justify-content: space-between; height: 70%; margin-top: 5%; }
 #numPokemon{width: 80%; margin: auto; border-radius: 10px;}
 #botPokemon{width: 80%; margin: auto; border-radius: 10px;}
 body{background-color: #012043}
-#bolinha{border-radius: 100%; width: 40px; height: 40px; background-color: blue; margin-left: 30px; margin-top: 10px;}
-
-#divTipo1{display: none;}
-#divTipo2{display: none;}
-#divTipo3{display: none;}
-#divTipo4{display: none;}
-#divTipo5{display: none;}
-#divTipo6{display: none;}
-#divTipo7{display: none;}
-#divTipo8{display: none;}
-#divTipo9{display: none;}
-#divTipo10{display: none;}
-#divTipo11{display: none;}
-#divTipo12{display: none;}
-#divTipo13{display: none;}
-#divTipo14{display: none;}
-#divTipo15{display: none;}
-#divTipo16{display: none;}
-#divTipo17{display: none;}
-#divTipo18{display: none;}
-#divTipo19{display: none;}
+#bolinha{position: absolute; border-radius: 100%; width: 40px; height: 40px; background-color: blue; margin-left: 30px; margin-top: 10px;}
+.displayNone{display: none;}
+img{width: 100%; margin-top: 50px;}
+h2{margin: 0;}
