--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,9 +1,10 @@
 .div{margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; display: flex; flex-direction: column; justify-content: space-between; height: 15%; }
-.div2{text-align: center; margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; display: flex; flex-direction: column; justify-content: space-between; height: 70%; margin-top: 5%; }
+.div2{text-align: center; margin: auto; border-radius: 15px 30px 15px 15px; background-color: #D34646; border: black solid; width: 30%; margin-top: 20px; }
 #numPokemon{width: 80%; margin: auto; border-radius: 10px;}
 #botPokemon{width: 80%; margin: auto; border-radius: 10px;}
 body{background-color: #012043}
-#bolinha{position: absolute; border-radius: 100%; width: 40px; height: 40px; background-color: blue; margin-left: 30px; margin-top: 10px;}
-.displayNone{display: none;}
-img{width: 100%; margin-top: 50px; display: none;}
+#bolinha{display: block; border-radius: 100%; width: 40px; height: 40px; background-color: blue; margin: 10px 10px 20px 30px;}
+.displayNone{display: none !important;}
+img{width: 80%; background-color: lightgray; border: white solid 5px; border-radius: 10px 10px 10px 60px; margin-top: 50px; display: none; margin: auto; margin-bottom: 30px;}
 h2{margin: 0;}
+#tiposPokemon{margin: 50px;}
